--- a/app/views/insured/group_selection/new.html.erb
+++ b/app/views/insured/group_selection/new.html.erb
@@ -180,3 +180,5 @@
   </div>
   <%= render :partial => "ui-components/v1/modals/waive_confirmation", :locals => {:enrollment => @hbx_enrollment } if (@hbx_enrollment.present? && (@hbx_enrollment.employee_role.present? || @hbx_enrollment.benefit_group.present?)) %>
 </div>
+
+<!--test modify-->
