--- a/app/views/shared/_sep_progress.html.haml
+++ b/app/views/shared/_sep_progress.html.haml
@@ -1,7 +1,7 @@
 - step = (defined? step) ? step.to_i : 1
 = ridp = (defined? ridp) ? ridp: false
 - continue_disabled = (defined? continue_disabled) ? continue_disabled : false
-
+-# test modify
 - percent_complete = 0
 - percent_complete = step == 1 ? 15 : (step == 2) ? 35 : ((step == 3) ? 50 : ((step == 4) ? 75 : ((step == 5) ? 90 : (step == 6 ? 100 : (step == 7) ? 100: 0))))
 %h3= "#{percent_complete}% Complete"
