--- a/app/views/shared/_shopping_nav_panel.html.haml
+++ b/app/views/shared/_shopping_nav_panel.html.haml
@@ -1,25 +1,22 @@
 - step = (defined? step) ? step.to_i : 1
 - no_previous_button = (defined? @no_previous_button) ? @no_previous_button : step == 1
-
-- save_and_exit_text = EnrollRegistry.feature_enabled?(:back_to_account_all_shop) ? "Log Out" : "SAVE &amp; EXIT"
 - link_style =  EnrollRegistry.feature_enabled?(:back_to_account_all_shop)  ? "width: 100%; font-size: 16px; text-decoration: underline;" : "text-transform: uppercase;"
-- help_sign_up_text = "Help Me Sign Up"
 
 - if EnrollRegistry.feature_enabled?(:back_to_account_all_shop)
   = link_to l10n("back_to_my_account"), family_account_path, class: 'btn btn-default btn btn-lg', style: 'width: 100%; margin-top: 16px;'
 %ul.list-unstyled.list-right-section
-  -# - unless no_previous_button
-  %li
-    %a.back{href: '#', style: link_style}
-      Previous Step
+  - unless no_previous_button
+    %li
+      %a.back{href: '#', style: link_style}
+        = l10n("previous_step")
   - if step != 1 && EnrollRegistry.feature_enabled?(:back_to_account_all_shop)
     %li
       %a{"data-target" => "#help_with_plan_shopping", "data-toggle" => "modal", style: link_style}
-        = help_sign_up_text
+        = l10n("help_sign_up")
   - unless @no_save_button
     %li
       %a{href: destroy_user_session_path, style: link_style}
-        = save_and_exit_text
+        = l10n("save_and_exit")
   - unless EnrollRegistry.feature_enabled?(:back_to_account_all_shop)
     %br
     %br
@@ -28,5 +25,5 @@
         If you select Save & Exit, you can save your work and continue where you left off the next time you login.
     - if step != 1
       .btn.btn-default{"data-target" => "#help_with_plan_shopping", "data-toggle" => "modal", "style" => "width: 100%;"}
-        = help_sign_up_text
+        = l10n("help_sign_up")
 = render partial: 'ui-components/v1/modals/help_with_plan'
