--- a/app/views/shared/_sep_shop_for_plans_progress.html.haml
+++ b/app/views/shared/_sep_shop_for_plans_progress.html.haml
@@ -31,13 +31,11 @@
 
   - if (@market_kind == 'shop' || @market_kind == 'fehb')
     = link_to 'Waive Coverage', '#', data: {toggle: "modal", target: "#waive_confirm"}, class: 'btn-waive btn btn-round btn-default' if @enrollment and @enrollment.employee_role.present?
-
-  %ul.list-unstyled.list-right-section
-    %li
-      %a.back{href: '#'}
-        <!-- = image_tag 'icons/list.png' -->
-        PREVIOUS
-- elsif step == 4
-  = link_to 'CONTINUE', family_account_path, class: 'btn btn-lg btn-primary  btn-block', id: 'btn-continue'
 - elsif step == 1
   = link_to 'CONTINUE', family_account_path, class: 'btn btn-lg btn-primary  btn-block no-sep-continue', disabled: true, id: 'btn-continue'
+
+= render partial: 'shared/shopping_nav_panel',
+  locals: {state: step == 1 ? 'house' : step == 2 ? 'shop' : step == 3 ? 'review' : 'complete',
+  no_previous_button: !(step == 3 && !no_purchase),
+  no_save_button: true,
+  no_help_sign_up: true }
