--- a/app/views/shared/_individual_progress.html.haml
+++ b/app/views/shared/_individual_progress.html.haml
@@ -67,14 +67,12 @@
   %br
 - elsif step == 5
   = link_to purchase_or_confirm, checkout_insured_plan_shopping_path(@enrollment.id, :plan_id => @plan.id, market_kind: @market_kind, coverage_kind: @coverage_kind), :class => 'btn btn-lg btn-primary  btn-block disabled', id: 'btn-continue', :method => :post, :disabled => !@enrollable
-- elsif step == 6
-  = link_to 'GO TO MY ACCOUNT', family_account_path, class: 'btn btn-primary ', id: 'btn-continue', style: 'width: 100%;'
 - else
   %button.btn.btn-lg.btn-primary.btn-block#btn-continue{type: 'submit'}
     CONTINUE
 
 = render partial: 'shared/shopping_nav_panel',
-  locals: {state: step == 3 ? 'house' : step == 4 ? 'shop' : (step == 5) ? 'review' : (step == 6) ? 'complete' : nil,
+  locals: {state: step == 3 ? 'house' : step == 4 ? 'shop' : step == 5 ? 'review' : step == 6 ? 'complete' : nil,
   no_previous_button: @no_previous_button || step == 1,
   no_save_button: @no_save_button,
   no_help_sign_up: true }
