--- a/app/views/shared/_sep_shop_for_plans_progress.html.haml
+++ b/app/views/shared/_sep_shop_for_plans_progress.html.haml
@@ -39,4 +39,4 @@
   no_previous_button: !(step == 3 && !no_purchase),
   no_save_button: true,
   no_help_sign_up: true,
-  back_to_account_text: l10n('continue').upcase } # Check with client if they desire consistent language with other like buttons.
+  continue_to_account_text: l10n('continue').upcase }
