--- a/app/views/shared/_shopping_nav_panel.html.haml
+++ b/app/views/shared/_shopping_nav_panel.html.haml
@@ -1,7 +1,7 @@
 -# state options: 'house', shop', 'review', 'complete'
-- ff = EnrollRegistry.feature_enabled?(:back_to_account_all_shop)
+- flag = EnrollRegistry.feature_enabled?(:back_to_account_all_shop)
 
-- if ff
+- if flag
   - no_previous_button = !state || state == 'house'
   - no_save_button = false
   - no_help_sign_up = state == 'review' || state == 'complete'
@@ -10,18 +10,21 @@
   - no_save_button ||= false
   - no_help_sign_up ||= false
 
-- link_style = ff ? "width: 100%; font-size: 16px; text-decoration: underline;" : "text-transform: uppercase;"
-- back_to_account_text = (state == 'complete') ? back_to_account_text || l10n("insured.plan_shoppings.receipt.go_to_my_account") : l10n("back_to_my_account")
+- link_style = flag ? "font-size: 16px; text-decoration: underline;" : "text-transform: uppercase;"
+- continue_to_account_text ||= l10n("insured.plan_shoppings.receipt.go_to_my_account")
+- to_account_text = (state == 'complete') ? continue_to_account_text  : l10n("back_to_my_account")
 
 - if state
-  - if ff || state == 'complete'
-    = link_to back_to_account_text, family_account_path, class: "btn btn btn-md #{state == "complete"? "btn-primary": "btn-default"}", id: 'btn-continue', style: 'width: 100%; margin-top: 16px;'
+  - if flag && state == 'house'
+    = submit_tag l10n('continue'), class: 'btn btn-primary btn-md full_width' + pundit_class(Family, :updateable?)
+  - if flag || state == 'complete'
+    = link_to to_account_text, family_account_path, class: "btn btn btn-md full_width #{state == "complete"? "btn-primary": "btn-default"}", id: 'btn-continue', style: 'width: 100%; margin-top: 16px;'
   %ul.list-unstyled.list-right-section
     - unless no_previous_button || state == 'complete'
       %li
         %a.back{href: '#', style: link_style}
           = l10n("previous_step")
-    - unless no_help_sign_up || !ff
+    - unless no_help_sign_up || !flag
       %li
         %a{"data-target" => "#help_with_plan_shopping", "data-toggle" => "modal", style: link_style}
           = l10n("help_sign_up")
@@ -29,12 +32,12 @@
       %li
         %a{href: destroy_user_session_path, style: link_style}
           = l10n("save_and_exit")
-      - unless ff
+      - unless flag
         %br
         %br
         %li
           %p
-            If you select Save & Exit, you can save your work and continue where you left off the next time you login.
-      - unless ff || no_help_sign_up
+            If you select Save & Exit, you can save your work and continue where you left oflag the next time you login.
+      - unless flag || no_help_sign_up
         .btn.btn-default{"data-target" => "#help_with_plan_shopping", "data-toggle" => "modal", "style" => "width: 100%;"}
           = l10n("help_sign_up")
