simplified code, more control by parameters

--- a/app/views/shared/_individual_progress.html.haml
+++ b/app/views/shared/_individual_progress.html.haml
@@ -72,7 +72,8 @@
     CONTINUE
 
 = render partial: 'shared/shopping_nav_panel',
-  locals: {state: step == 3 ? 'house' : step == 4 ? 'shop' : step == 5 ? 'review' : step == 6 ? 'complete' : nil,
-  no_previous_button: @no_previous_button || step == 1,
-  no_save_button: @no_save_button,
-  no_help_sign_up: true }
+  locals: {show_exit_button: !@no_save_button,
+  show_previous_button: !@no_previous_button || step == 1,
+  show_account_button: step > 2 && EnrollRegistry.feature_enabled?(:back_to_account_all_shop),
+  is_complete: step == 6,
+  show_help_button: step != 1 }
