--- a/app/views/shared/_shop_for_plans_progress.html.haml
+++ b/app/views/shared/_shop_for_plans_progress.html.haml
@@ -29,8 +29,9 @@
   = link_to 'Confirm', checkout_insured_plan_shopping_path(@enrollment.id, :plan_id => @plan.id, :change_plan => @change_plan, market_kind: @market_kind, coverage_kind: @coverage_kind), :class => "btn btn-lg btn-primary  btn-block #{disabled_in_ivl}", id: 'btn-continue', :method => :post, :disabled => disable_purchase?(!@enrollable, @enrollment), 'data-disable-with' => l10n("please_wait")
 
 = render partial: 'shared/shopping_nav_panel',
-  locals: {state: step == 1 ? 'shop' : step == 2 ? 'review' : 'complete',
-  no_previous_button: !(step == 2 && !no_purchase),
-  no_save_button: true,
-  no_help_sign_up: true,
+  locals: {show_exit_button: false,
+  show_previous_button: step == 2 && !no_purchase,
+  show_account_button: EnrollRegistry.feature_enabled?(:back_to_account_all_shop),
+  show_help_button: false,
+  is_complete: step == 3,
   continue_to_account_text: @market_kind == "individual" ? nil : l10n('continue').upcase }
