--- a/app/views/shared/_shopping_nav_panel.html.haml
+++ b/app/views/shared/_shopping_nav_panel.html.haml
@@ -1,43 +1,38 @@
--# state options: 'house', shop', 'review', 'complete'
 - back_to_account_flag = EnrollRegistry.feature_enabled?(:back_to_account_all_shop)
 
-- if back_to_account_flag
-  - no_previous_button = !state || state == 'house'
-  - no_save_button = false
-  - no_help_sign_up = state == 'review' || state == 'complete'
-- else
-  - no_previous_button ||= false
-  - no_save_button ||= false
-  - no_help_sign_up ||= false
+- default_value = Proc.new { |value, default| value.nil? ? default : value }
+
+- is_complete = default_value.call(is_complete, false)
+- show_exit_button = default_value.call(show_exit_button, true)
+- show_previous_button = default_value.call(show_previous_button, true)
+- show_account_button = default_value.call(show_account_button, back_to_account_flag)
+- show_help_button = default_value.call(show_help_button, !is_complete)
 
 - link_style = back_to_account_flag ? "font-size: 16px; text-decoration: underline;" : "text-transform: uppercase;"
 - continue_to_account_text ||= l10n("insured.plan_shoppings.receipt.go_to_my_account")
-- to_account_text = (state == 'complete') ? continue_to_account_text  : l10n("back_to_my_account")
+- to_account_text = is_complete ? continue_to_account_text : l10n("back_to_my_account")
 
-- if state
-  - if back_to_account_flag && state == 'house'
-    = submit_tag l10n('continue'), class: 'btn btn-primary btn-md full_width' + pundit_class(Family, :updateable?)
-  - if back_to_account_flag || state == 'complete'
-    = link_to to_account_text, family_account_path, class: "btn btn btn-md full_width #{state == "complete"? "btn-primary": "btn-default"}", id: 'btn-continue', style: 'width: 100%; margin-top: 16px;'
-  %ul.list-unstyled.list-right-section
-    - unless no_previous_button || state == 'complete'
+- if show_account_button || is_complete
+  = link_to to_account_text, family_account_path, class: "btn btn btn-md full_width #{is_complete ? 'btn-primary' : 'btn-default'}", id: 'btn-continue', style: 'width: 100%; margin-top: 16px;'
+%ul.list-unstyled.list-right-section
+  - if show_previous_button
+    %li
+      %a.back{href: '#', style: link_style}
+        = l10n("previous_step")
+  - if show_help_button && back_to_account_flag
+    %li
+      %a{"data-target" => "#help_with_plan_shopping", "data-toggle" => "modal", style: link_style}
+        = l10n("help_sign_up")
+  - if show_exit_button
+    %li
+      %a{href: destroy_user_session_path, style: link_style}
+        = l10n("save_and_exit")
+    - unless back_to_account_flag
+      %br
+      %br
       %li
-        %a.back{href: '#', style: link_style}
-          = l10n("previous_step")
-    - unless no_help_sign_up || !back_to_account_flag
-      %li
-        %a{"data-target" => "#help_with_plan_shopping", "data-toggle" => "modal", style: link_style}
-          = l10n("help_sign_up")
-    - unless no_save_button
-      %li
-        %a{href: destroy_user_session_path, style: link_style}
-          = l10n("save_and_exit")
-      - unless back_to_account_flag
-        %br
-        %br
-        %li
-          %p
-            If you select Save & Exit, you can save your work and continue where you left off the next time you login.
-      - unless back_to_account_flag || no_help_sign_up
-        .btn.btn-default{"data-target" => "#help_with_plan_shopping", "data-toggle" => "modal", "style" => "width: 100%;"}
-          = l10n("help_sign_up")
+        %p
+          = "If you select #{l10n('save_and_exit')}, you can save your work and continue where you left off the next time you login."
+  - if show_help_button && !back_to_account_flag
+    .btn.btn-default{"data-target" => "#help_with_plan_shopping", "data-toggle" => "modal", "style" => "width: 100%;"}
+      = l10n("help_sign_up")
