--- a/app/views/shared/_shopping_nav_panel.html.haml
+++ b/app/views/shared/_shopping_nav_panel.html.haml
@@ -1,4 +1,4 @@
-- back_to_account_flag = EnrollRegistry.feature_enabled?(:back_to_account_all_shop)
+- back_to_account_flag = true #EnrollRegistry.feature_enabled?(:back_to_account_all_shop)
 
 - default_value = Proc.new { |value, default| value.nil? ? default : value }
 
@@ -14,25 +14,26 @@
 
 - if show_account_button || is_complete
   = link_to to_account_text, family_account_path, class: "btn btn btn-md full_width #{is_complete ? 'btn-primary' : 'btn-default'}", id: 'btn-continue', style: 'width: 100%; margin-top: 16px;'
-%ul.list-unstyled.list-right-section
-  - if show_previous_button
-    %li
-      %a.back{href: '#', style: link_style}
-        = l10n("previous_step")
-  - if show_help_button && back_to_account_flag
-    %li
-      %a{"data-target" => "#help_with_plan_shopping", "data-toggle" => "modal", style: link_style}
-        = l10n("help_sign_up")
-  - if show_exit_button
-    %li
-      %a{href: destroy_user_session_path, style: link_style}
-        = l10n("save_and_exit")
-    - unless back_to_account_flag
-      %br
-      %br
+%div{style: "display: flex; flex-direction: column;"}
+  %ul.list-unstyled.list-right-section
+    - if show_previous_button
       %li
-        %p
-          = "If you select #{l10n('save_and_exit')}, you can save your work and continue where you left off the next time you login."
+        %a.back{href: '#', style: link_style}
+          = l10n("previous_step")
+    - if show_help_button && back_to_account_flag
+      %li
+        %a{"data-target" => "#help_with_plan_shopping", "data-toggle" => "modal", style: link_style}
+          = l10n("help_sign_up")
+    - if show_exit_button
+      %li
+        %a{href: destroy_user_session_path, style: link_style}
+          = l10n("save_and_exit")
+      - unless back_to_account_flag
+        %br
+        %br
+        %li
+          %p
+            = "If you select #{l10n('save_and_exit')}, you can save your work and continue where you left off the next time you login."
   - if show_help_button && !back_to_account_flag
     .btn.btn-default{"data-target" => "#help_with_plan_shopping", "data-toggle" => "modal", "style" => "width: 100%;"}
       = l10n("help_sign_up")
