--- a/app/views/devise/passwords/new.html.slim
+++ b/app/views/devise/passwords/new.html.slim
@@ -12,7 +12,7 @@
 				.invalid-feedback
 					| Please enter an email address.
 				br
-				- if forgot_password_recaptcha_enabled?("user_account")
+				- if forgot_password_recaptcha_enabled?
 				  = recaptcha_tags
 			.form-group
 				= f.submit l10n(".send_me_reset_password_instructions"), class: 'btn btn-primary mb-3'
