--- a/app/views/shared/_pay_now_modal.html.erb
+++ b/app/views/shared/_pay_now_modal.html.erb
@@ -2,12 +2,12 @@
 <% carrier_long_name = carrier_long_name(carrier) %>
 
 <%# using show_pay_now? method makes sure pay now is enabled and other conditions are met for linking to the pay now portal %>
-<%# <% first_payment = show_pay_now?("Enrollment Tile", hbx_enrollment) && before_effective_date?(hbx_enrollment) %>
 <% first_payment = show_pay_now?(source, hbx_enrollment) && before_effective_date?(hbx_enrollment) %>
 <% plan_shopping = carrier_paynow_enabled?(carrier) && source == "Plan Shopping" %>
 <%# use PayNow url if user is making first payment, otherwise use generic carrier url %>
-<%# note: Plan Shopping flow is checked explicitly because it always indicates a first payment, even when effective date is in the past (for example, when enrolling via SEP) %>
 <% url = first_payment || plan_shopping ? pay_now_url(carrier) : carrier_url(carrier) %>
+<%# note: Plan Shopping flow is checked explicitly because it always indicates a first payment,
+    even when effective date is in the past (for example, when enrolling via SEP) %>
 
 <% carrier_key = carrier_paynow_enabled?(carrier) ? fetch_carrier_key_from_legal_name(carrier) : "other" %>
 <div class="modal fade" tabindex="-1" role="dialog" id="payNowModal<%= hbx_enrollment.hbx_id %>">
