--- a/app/views/insured/families/_enrollment_actions.html.erb
+++ b/app/views/insured/families/_enrollment_actions.html.erb
@@ -55,5 +55,5 @@
 </div>
 
 <% if hbx_enrollment.product.present? && enrollment_is_ivl_or_coverall?(hbx_enrollment) %>
-    <%= render "shared/pay_now_modal", hbx_enrollment: hbx_enrollment, source: "enrollment_tile" %>
+    <%= render "shared/pay_now_modal", hbx_enrollment: hbx_enrollment, source: "Enrollment Tile" %>
 <% end %>
