--- a/app/views/insured/families/_enrollment.html.erb
+++ b/app/views/insured/families/_enrollment.html.erb
@@ -151,26 +151,34 @@
             </p>
           </div>
           <div class="enrollment-type info vertical-align-top">
-            <% if hbx_enrollment.consumer_role.present? && (hbx_enrollment.applied_aptc_amount > 0) %>
-            <p>
-              <label><strong><%= l10n("APTC_amount") %>:</strong></label>
-              <%= number_to_currency(hbx_enrollment.applied_aptc_amount, precision: 2) %>/<%= l10n("month").to_s.downcase %>
-            </p>
-            <% else %>
-            &nbsp;
-            <% end %>
+            <%= logger.info "APPLIED APTC AMOUNT START TimeNow: #{Time.now}" %>
+            <%= benchmark_measure = Benchmark.measure do %>
+              <% if hbx_enrollment.consumer_role.present? && (hbx_enrollment.applied_aptc_amount > 0) %>
+              <p>
+                <label><strong><%= l10n("APTC_amount") %>:</strong></label>
+                <%= number_to_currency(hbx_enrollment.applied_aptc_amount, precision: 2) %>/<%= l10n("month").to_s.downcase %>
+              </p>
+              <% else %>
+              &nbsp;
+              <% end %>
+            <%= logger.info "APPLIED APTC AMOUNT END TimeNow: #{Time.now}, benchmark_measure: #{benchmark_measure}, HBXID: #{hbx_enrollment.hbx_id}" %>
+          <% end %>
           </div>
         </div>
         <div class="col-xs-12 vertically-aligned-row">
           <div></div>
           <div class="enrollment-type info vertical-align-top">
-            <% if (hbx_enrollment.eligible_child_care_subsidy > 0) %>
-              <p>
-                <label><strong><%= l10n("hc44cc_premium_discount") %>:</strong></label>
-                <%= number_to_currency(hbx_enrollment.eligible_child_care_subsidy, precision: 2)%>/<%= l10n("month").to_s.downcase %>
-              </p>
-            <% else %>
-              &nbsp;
+            <%= logger.info "PREMIUM DISCOUNT START TimeNow: #{Time.now}" %>
+            <%= benchmark_measure = Benchmark.measure do %>
+                <% if (hbx_enrollment.eligible_child_care_subsidy > 0) %>
+                  <p>
+                    <label><strong><%= l10n("hc44cc_premium_discount") %>:</strong></label>
+                    <%= number_to_currency(hbx_enrollment.eligible_child_care_subsidy, precision: 2)%>/<%= l10n("month").to_s.downcase %>
+                  </p>
+              <% else %>
+                &nbsp;
+              <% end %>
+              <%= logger.info "PREMIUM DISCOUNTEND TimeNow: #{Time.now}, benchmark_measure: #{benchmark_measure}, HBXID: #{hbx_enrollment.hbx_id}" %>
             <% end %>
           </div>
         </div>
@@ -238,47 +246,59 @@
                   <%# coverage details %>
                   <div class="dropdown-divider" style="border-top: 1px solid #e9ecef"></div>
                   <a href="<%= summary_products_plans_path({standard_component_id: product.hios_id, hbx_enrollment_id: hbx_enrollment.id, active_year: product.active_year, source: 'account'}) %>" class='btn-link btn-block dropdown-item' id='view-details-btn' style='padding: 6px 12px; margin: 4px 0;' data-remote='true'>
-                    <%= render partial:"shared/glossary_hover", locals: {key: "view_coverage_details", title: "View my coverage details", term: sanitize(l10n("view_details")) } %>
+                    <%= logger.info "GLOSSARY HOVER MODAL START TimeNow: #{Time.now}" %>
+                    <%= benchmark_measure = Benchmark.measure do %>
+                      <%= render partial:"shared/glossary_hover", locals: {key: "view_coverage_details", title: "View my coverage details", term: sanitize(l10n("view_details")) } %>
+                    <%= logger.info "GLOSSARY HOVER MODAL END TimeNow: #{Time.now}, benchmark_measure: #{benchmark_measure}, HBXID: #{hbx_enrollment.hbx_id}" %>
+                  <% end %>
                   </a>
 
                   <%# changes to plan %>
-                  <div class="dropdown-divider" style="border-top: 1px solid #e9ecef"></div>
-                  <% if can_make_changes_for_enrollment && !(hbx_enrollment.coverage_terminated? || hbx_enrollment.coverage_canceled?) && hbx_enrollment.is_shop?%>
-                    <%= pundit_span Family, :updateable? %>
-                      <!-- Use turbolinks: false, to avoid calling controller action twice-->
-                      <a href="<%= new_insured_group_selection_path(person_id: @person.id, employee_role_id: @employee_role.try(:id), change_plan: 'change_plan', hbx_enrollment_id: hbx_enrollment.id, coverage_kind: hbx_enrollment.coverage_kind) %>" class='btn-link btn-block dropdown-item ee-make-changes' id='make-changes-btn' style='padding: 6px 12px; margin: 4px 0;' disabled=<%= !can_make_changes_for_enrollment %> data-turbolinks='false' >
-                        <%= logger.info "GLOSSARY HOVER MAKE CHANGES START TimeNow: #{Time.now}" %>
-                        <%= benchmark_measure = Benchmark.measure do %>
+                  <%= logger.info "CHANGES TO PLAN MODAL START TimeNow: #{Time.now}" %>
+                  <%= benchmark_measure = Benchmark.measure do %>
+                    <div class="dropdown-divider" style="border-top: 1px solid #e9ecef"></div>
+                    <% if can_make_changes_for_enrollment && !(hbx_enrollment.coverage_terminated? || hbx_enrollment.coverage_canceled?) && hbx_enrollment.is_shop?%>
+                      <%= pundit_span Family, :updateable? %>
+                        <!-- Use turbolinks: false, to avoid calling controller action twice-->
+                        <a href="<%= new_insured_group_selection_path(person_id: @person.id, employee_role_id: @employee_role.try(:id), change_plan: 'change_plan', hbx_enrollment_id: hbx_enrollment.id, coverage_kind: hbx_enrollment.coverage_kind) %>" class='btn-link btn-block dropdown-item ee-make-changes' id='make-changes-btn' style='padding: 6px 12px; margin: 4px 0;' disabled=<%= !can_make_changes_for_enrollment %> data-turbolinks='false' >
+                          <%= logger.info "GLOSSARY HOVER MAKE CHANGES START TimeNow: #{Time.now}" %>
+                          <%= benchmark_measure = Benchmark.measure do %>
+                            <%= render partial:"shared/glossary_hover", locals: {key: "make_changes_to_coverage", title: "Make changes to my plan", term: sanitize(l10n('make_changes')) } %>
+                            <%= logger.info "GLOSSARY HOVER MAKE CHANGES END TimeNow: #{Time.now}, benchmark_measure: #{benchmark_measure}, HBXID: #{hbx_enrollment.hbx_id}" %>
+                          <% end %>
+                        </a>
+                      </span>
+                    <!-- This potentially allows certain shop users to view Make Changes -->
+                    <% elsif can_make_changes_for_enrollment %>
+                      <%= pundit_span Family, :updateable? %>
+                        <a href="<%= edit_plan_insured_group_selections_path(hbx_enrollment_id: hbx_enrollment.id, family_id: @family.id) %>" class='btn-link btn-block dropdown-item ivl-make-changes' id='make-changes-btn' style='padding: 6px 12px; margin: 4px 0;'>
                           <%= render partial:"shared/glossary_hover", locals: {key: "make_changes_to_coverage", title: "Make changes to my plan", term: sanitize(l10n('make_changes')) } %>
-                          <%= logger.info "GLOSSARY HOVER MAKE CHANGES END TimeNow: #{Time.now}, benchmark_measure: #{benchmark_measure}, HBXID: #{hbx_enrollment.hbx_id}" %>
-                        <% end %>   
-                      </a>
-                    </span>
-                  <!-- This potentially allows certain shop users to view Make Changes -->
-                  <% elsif can_make_changes_for_enrollment %>
-                    <%= pundit_span Family, :updateable? %>
-                      <a href="<%= edit_plan_insured_group_selections_path(hbx_enrollment_id: hbx_enrollment.id, family_id: @family.id) %>" class='btn-link btn-block dropdown-item ivl-make-changes' id='make-changes-btn' style='padding: 6px 12px; margin: 4px 0;'>
-                        <%= render partial:"shared/glossary_hover", locals: {key: "make_changes_to_coverage", title: "Make changes to my plan", term: sanitize(l10n('make_changes')) } %>
-                      </a>
-                    </span>
+                        </a>
+                      </span>
+                    <% end %>
+                  <%= logger.info "CHANGES TO PLAN MODAL END TimeNow: #{Time.now}, benchmark_measure: #{benchmark_measure}, HBXID: #{hbx_enrollment.hbx_id}" %>
                   <% end %>
 
                   <%# pay now %>
                   <div class="dropdown-divider" style="border-top: 1px solid #e9ecef"></div>
-                  <% if hbx_enrollment.product.present? && enrollment_is_ivl_or_coverall?(hbx_enrollment) %>
-                    <% if show_pay_now?("Enrollment Tile", hbx_enrollment) %>
-                      <button class="btn-link btn-block" data-toggle="modal" data-target="#payNowModal<%= hbx_enrollment.hbx_id %>" style="padding: 6px 12px; margin: 4px 0; text-align: left;" data-enrollment="<%= hbx_enrollment.hbx_id %>">
-                        <% if before_effective_date?(hbx_enrollment) %>
-                          <%= render partial:"shared/glossary_hover", locals: {key: "make_payment_before_effective_hover", title: "Make a first payment for my new plan", term: sanitize(l10n("plans.issuer.pay_now.make_first_payment")) } %>
-                        <% else %> <%# after or on effective date %>
-                          <%= render partial:"shared/glossary_hover", locals: {key: "make_payments_hover", title: "Make payments for my plan", term: sanitize(l10n("plans.issuer.pay_now.make_payments")) } %>
-                        <% end %>
-                      </button>
-                    <% elsif show_generic_redirect?(hbx_enrollment) %>
-                      <button class="btn-link btn-block" data-toggle="modal" data-target="#payNowModal<%= hbx_enrollment.hbx_id %>" style="padding: 6px 12px; margin: 4px 0; text-align: left;" data-enrollment="<%= hbx_enrollment.hbx_id %>">
-                        <%= render partial:"shared/glossary_hover", locals: {key: "generic_make_payments_hover", title: "Make payments for my plan", term: sanitize(l10n("plans.issuer.pay_now.make_payments")) } %>
-                      </button>
+                  <%= logger.info "SHOW PAY NOW MODAL START TimeNow: #{Time.now}" %>
+                  <%= benchmark_measure = Benchmark.measure do %>
+                    <% if hbx_enrollment.product.present? && enrollment_is_ivl_or_coverall?(hbx_enrollment) %>
+                      <% if show_pay_now?("Enrollment Tile", hbx_enrollment) %>
+                        <button class="btn-link btn-block" data-toggle="modal" data-target="#payNowModal<%= hbx_enrollment.hbx_id %>" style="padding: 6px 12px; margin: 4px 0; text-align: left;" data-enrollment="<%= hbx_enrollment.hbx_id %>">
+                          <% if before_effective_date?(hbx_enrollment) %>
+                            <%= render partial:"shared/glossary_hover", locals: {key: "make_payment_before_effective_hover", title: "Make a first payment for my new plan", term: sanitize(l10n("plans.issuer.pay_now.make_first_payment")) } %>
+                          <% else %> <%# after or on effective date %>
+                            <%= render partial:"shared/glossary_hover", locals: {key: "make_payments_hover", title: "Make payments for my plan", term: sanitize(l10n("plans.issuer.pay_now.make_payments")) } %>
+                          <% end %>
+                        </button>
+                      <% elsif show_generic_redirect?(hbx_enrollment) %>
+                        <button class="btn-link btn-block" data-toggle="modal" data-target="#payNowModal<%= hbx_enrollment.hbx_id %>" style="padding: 6px 12px; margin: 4px 0; text-align: left;" data-enrollment="<%= hbx_enrollment.hbx_id %>">
+                          <%= render partial:"shared/glossary_hover", locals: {key: "generic_make_payments_hover", title: "Make payments for my plan", term: sanitize(l10n("plans.issuer.pay_now.make_payments")) } %>
+                        </button>
+                      <% end %>
                     <% end %>
+                  <%= logger.info "SHOW PAY NOW MODAL END TimeNow: #{Time.now}, benchmark_measure: #{benchmark_measure}, HBXID: #{hbx_enrollment.hbx_id}" %>
                   <% end %>
                 </div>
               </div>
