--- a/components/benefit_sponsors/app/views/benefit_sponsors/profiles/employers/employer_profiles/_employer_form.html.erb
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/profiles/employers/employer_profiles/_employer_form.html.erb
@@ -124,30 +124,12 @@
             <div class="mt-2">
               <h2><%=l10n('osse_subsidy_title')%></h2>
               <p><%=l10n('osse_eligibility_description')%></p>
-              <div class="row no-buffer vertically-aligned-row" style="width: 100%; border: 1px solid #ddd; border-top: none; margin-top: 15px; padding: 15px; background-color: #fff;">
-                <%=l10n('osse_eligibility_question')%>
-                <div class="form-checkform-check-inline col-md-2 col-xs-12 form-group form-group-lg">
-                    <label style="accent-color: #007bc4;">
-                      <%= f_profile.radio_button :osse_eligibility, true, class: "n-radio", disabled: !pundit_allow(HbxProfile, :can_edit_osse_eligibility?) %>
-                      </label>
-                      <span><%=l10n('yes')%></span>
-                    
-                  </div>
-                  <div class="form-check form-check-inline col-md-2 col-xs-12 form-group form-group-lg">
-                    <label style="accent-color: #007bc4;">
-                      <%= f_profile.radio_button :osse_eligibility, false, class: "n-radio", disabled: !pundit_allow(HbxProfile, :can_edit_osse_eligibility?) %>
-                    </label>
-                      <span><%=l10n('no')%></span>
-                    
-                  </div>
-                  <% if osse_eligibility_history_is_enabled? %>
-                    <div class="form-check form-check-inline col-md-3 col-sm-3 col-xs-12 form-group form-group-lg no-pd">
-                    <a class="form-check-label"><%=l10n('eligibility_history')%></a>
-                    </div>
-                  <% else %>
-                    <div class="form-check form-check-inline col-md-3 col-sm-3 col-xs-12 form-group form-group-lg no-pd"></div>
-                  <% end %>
+              <div class="row no-buffer vertically-aligned-row" style="width: 100%; border: 1px solid #ddd; border-top: none; margin-top: 8px; padding: 8px; background-color: #fff;">
+                <div class="col-md-9"><%= "OSSE Subsidies |"%><%= employer_current_year_osse_status %></div>
+                <div class="col-md-3">
+                  <%= link_to 'Select Eligibility Year(s)', profiles_employers_employer_profile_osse_eligibilities_path(employer_profile_id: @agency.profile_id), id: "check_osse_eligibilities", class: 'btn btn-primary active', style: 'background-color: #007bc4' %>
                 </div>
+              </div>
             </div>
           <%end%>
           <h2> Office Locations </h2>
