--- a/components/financial_assistance/app/views/financial_assistance/applications/_non_oe_year_selection_form.html.erb
+++ b/components/financial_assistance/app/views/financial_assistance/applications/_non_oe_year_selection_form.html.erb
@@ -12,8 +12,8 @@
           <h2 class="darkblue"><%= l10n("faa.year_selection_header") %></h2>
           <p><%= l10n("faa.year_selection_subheader") %></p>
           <p><b><%= calendar_year %></b><br> <%= l10n("faa.non_oe_see_if_you_qualify_1", year: calendar_year) %><br><%= link_to l10n("faa.non_oe_learn_more"), FinancialAssistanceRegistry[:iap_year_selection_form].setting(:iap_year_sep_link).item %>.</p>
-          <p><b><%= previous_year %></b><br> <%= l10n("faa.non_oe_see_if_you_qualify_2", calendar_year: calendar_year, previous_year: previous_year) %></p>
-          <h3><%= l10n("Choose_a_plan_year") %></h3>
+          <p><b><%= previous_year %></b><br> <%= l10n("faa.non_oe_see_if_you_qualify_2", calendar_year: calendar_year, previous_year: previous_year, site_short_name: EnrollRegistry[:enroll_app].setting(:short_name).item) %></p>
+          <h3><%= l10n("faa.choose_a_plan_year") %></h3>
           <label><%= f.radio_button :assistance_year, calendar_year %> <%= calendar_year %></label><br>
           <label><%= f.radio_button :assistance_year, previous_year %> <%= previous_year %></label>
         </div>
