--- a/app/views/ui-components/v1/filters/_plan_filters.html.slim
+++ b/app/views/ui-components/v1/filters/_plan_filters.html.slim
@@ -1,4 +1,4 @@
-- is_ivl_osse_filter_eligible = ivl_osse_filtering_enabled? && @hbx_enrollment.ivl_osse_eligible?(@hbx_enrollment.effective_on)
+- is_ivl_osse_filter_eligible = ivl_osse_filtering_enabled? && @hbx_enrollment.ivl_osse_eligible?
 #filter-sidebar.col-lg-3.col-md-3.co-sm-3.col-xs-12.pl-0
   .checkbox-filter-wrapper-uc
     / TODO: These links will be deprecated for Maine. New feature checks will be added here to make them dissappear.
