--- a/app/views/insured/group_selection/_change_tax_credit_form.html.erb
+++ b/app/views/insured/group_selection/_change_tax_credit_form.html.erb
@@ -28,7 +28,7 @@
         </span>
         <%# Specify the value attribute on slider to move to right starting spot %>
         <% slider_starting_value = @self_term_or_cancel_form[:elected_aptc_pct] %>
-        <% min_aptc = @self_term_or_cancel_form[:enrollment].osse_eligible? && ivl_osse_filtering_enabled? ? 0.85 : 0 %>
+        <% min_aptc = @self_term_or_cancel_form[:enrollment].osse_eligible? && ivl_osse_filtering_enabled? ? minimum_applied_aptc_pct_for_osse : 0 %>
         <% step = @self_term_or_cancel_form[:enrollment].osse_eligible? && ivl_osse_filtering_enabled? ? 0.005 : 0.05 %>
         <input id="applied_pct_1" name='applied_pct_1' type="range" min="<%= min_aptc %>" value="<%= slider_starting_value %>" max="1" step="<%= step %>" style = "padding: 0px;" data-cuke="aptc_slider">
         <h5><b><%= l10n("tax_credit_value") %></b></h5>
