--- a/app/views/ui-components/v1/navs/_families_navigation.html.slim
+++ b/app/views/ui-components/v1/navs/_families_navigation.html.slim
@@ -23,7 +23,7 @@ nav
       li
         = link_to main_app.upload_application_insured_families_path(tab: 'verification') do
           = l10n("upload_paper_application")
-    - if current_user.try(:has_hbx_staff_role?) && display_childcare_program_options(@person)
+    - if current_user.try(:has_hbx_staff_role?) && ivl_osse_enabled? && display_childcare_program_options(@person)
       li
         = link_to(main_app.healthcare_for_childcare_program_insured_families_path(tab: 'osse')) do
           = l10n("osse_eligibility")
