--- a/app/views/ui-components/v1/filters/_plan_filters.html.slim
+++ b/app/views/ui-components/v1/filters/_plan_filters.html.slim
@@ -147,7 +147,7 @@
         = hidden_field_tag :coverage_kind, @coverage_kind
         = hidden_field_tag :set_elected_aptc_url, set_elected_aptc_insured_plan_shopping_path(id: @hbx_enrollment.try(:id)) if @hbx_enrollment.present?
         form oninput=("pct.value = (elected_pct.value*100).toFixed(0)") onsubmit=("return false")
-          - min_aptc = is_ivl_osse_filter_eligible ? 0.85 : 0
+          - min_aptc = is_ivl_osse_filter_eligible ? minimum_applied_aptc_pct_for_osse : 0
           - step = is_ivl_osse_filter_eligible ? 0.005 : 0.05
           input max="1" min="#{min_aptc}" name="elected_pct" step="#{step}" type="range" value= "#{pct}" style="padding:0;"
           span style="font-size:12px;" #{(min_aptc * 100).to_i}%
