--- a/app/views/shared/person/_consumer_information.html.erb
+++ b/app/views/shared/person/_consumer_information.html.erb
@@ -37,9 +37,14 @@
     </div>
 
     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-7 form-group form-group-lg no-pd">
-      <%= f.text_field :ssn, placeholder: "#{l10n("social_security").to_s.upcase}", class: "required floatlabel form-control",
-        pattern: "(?!666|000|9\\d{2})\\d{3}[\\- ]{0,1}(?!00)\\d{2}[\\- ]{0,1}(?!0{4})\\d{4}", oninvalid: "this.setCustomValidity('Invalid Social Security number.')",
-        oninput: "this.setCustomValidity('')", disabled: readonly_status, readonly: f.object.is_a?(Forms::EmployeeRole) %>
+      <% if EnrollRegistry.feature_enabled?(:ssn_ui_validation) %>
+        <%= f.text_field :ssn, placeholder: "#{l10n("social_security").to_s.upcase}", class: "required floatlabel form-control",
+          pattern: "(?!666|000|9\\d{2})\\d{3}[\\- ]{0,1}(?!00)\\d{2}[\\- ]{0,1}(?!0{4})\\d{4}", oninvalid: "this.setCustomValidity('Invalid Social Security number.')",
+          oninput: "this.setCustomValidity('')", disabled: readonly_status, readonly: f.object.is_a?(Forms::EmployeeRole) %>
+      <% else %>
+        <%= f.text_field :ssn, placeholder: "SOCIAL SECURITY", class: "required floatlabel form-control", disabled: readonly_status,
+          readonly: f.object.is_a?(Forms::EmployeeRole) %>
+      <% end %>
     </div>
 
     <div class="col-lg-3 col-md-2 col-sm-2 col-xs-5 form-group form-group-lg no-pd top-buffer" >
