--- a/app/views/shared/person/_personal_information.html.erb
+++ b/app/views/shared/person/_personal_information.html.erb
@@ -27,10 +27,15 @@
                                                  required: true, readonly: f.object.is_a?(Forms::EmployeeRole) } %>
     </div>
     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 form-group form-group-lg no-pd">
-      <%= f.text_field :ssn, placeholder: "#{l10n("social_security").to_s.upcase}", class: "required floatlabel form-control",
-        required: f.object.no_ssn == "1" ? false : true, :disabled => f.object.no_ssn == "1" ? true : readonly_status,
-        pattern: "(?!666|000|9\\d{2})\\d{3}[\\- ]{0,1}(?!00)\\d{2}[\\- ]{0,1}(?!0{4})\\d{4}", oninvalid: "this.setCustomValidity('Invalid Social Security number.')",
-        oninput: "this.setCustomValidity('')", readonly: f.object.is_a?(Forms::EmployeeRole) %>
+      <% if EnrollRegistry.feature_enabled?(:ssn_ui_validation) %>
+        <%= f.text_field :ssn, placeholder: "#{l10n("social_security").to_s.upcase}", class: "required floatlabel form-control",
+          required: f.object.no_ssn == "1" ? false : true, :disabled => f.object.no_ssn == "1" ? true : readonly_status,
+          pattern: "(?!666|000|9\\d{2})\\d{3}[\\- ]{0,1}(?!00)\\d{2}[\\- ]{0,1}(?!0{4})\\d{4}", oninvalid: "this.setCustomValidity('Invalid Social Security number.')",
+          oninput: "this.setCustomValidity('')", readonly: f.object.is_a?(Forms::EmployeeRole) %>
+      <% else %>
+        <%= f.text_field :ssn, placeholder: "SOCIAL SECURITY", class: "required floatlabel form-control",
+          required: f.object.no_ssn == "1" ? false : true, :disabled => f.object.no_ssn == "1" ? true : readonly_status, readonly: f.object.is_a?(Forms::EmployeeRole) %>
+      <% end %>
     </div>
     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 form-group form-group-lg no-pd top-buffer" >
       <%= f.check_box :no_ssn,  :value => false, :onclick=>"$('#person_ssn').prop('disabled', !$('#person_ssn').prop('disabled')); $('#person_ssn').prop('required', !$('#person_ssn').prop('required'))" %>
