--- a/components/benefit_sponsors/app/views/benefit_sponsors/profiles/employers/employer_profiles/_employer_form.html.erb
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/profiles/employers/employer_profiles/_employer_form.html.erb
@@ -125,9 +125,9 @@
               <h2><%=l10n('osse_subsidy_title')%></h2>
               <p><%=l10n('osse_eligibility_description')%></p>
               <div class="row no-buffer vertically-aligned-row" style="width: 100%; border: 1px solid #ddd; border-top: none; margin-top: 8px; padding: 8px; background-color: #fff;">
-                <div class="col-md-9"><%= "OSSE Subsidies |"%><%= employer_current_year_osse_status %></div>
+                <div class="col-md-9"><%= l10n('hc4cc_subsidy_with_pipe') %><%= employer_current_year_osse_status %></div>
                 <div class="col-md-3">
-                  <%= link_to 'Select Eligibility Year(s)', profiles_employers_employer_profile_osse_eligibilities_path(employer_profile_id: @agency.profile_id), id: "check_osse_eligibilities", class: 'btn btn-primary active', style: 'background-color: #007bc4' %>
+                  <%= link_to l10n('select_eligibility_years'), profiles_employers_employer_profile_osse_eligibilities_path(employer_profile_id: @agency.profile_id), id: "check_osse_eligibilities", class: 'btn btn-primary active', style: 'background-color: #007bc4' %>
                 </div>
               </div>
             </div>
