code style changes

--- a/app/views/shared/_glossary.html.erb
+++ b/app/views/shared/_glossary.html.erb
@@ -12,12 +12,12 @@
       data-fallbackPlacement="flip"
       data-html="true"
       data-content="<%= l10n("glossary.#{key}") %>"
-      data-title="<%= term_display %>"
+      data-title="<%= term_display %>">
   <button data-dismiss='modal'
           type='button'
           class='close'
           aria-label='Close'
-          onclick='$('.glossary').popover('hide');'>
+          onclick="$('.glossary').popover('hide');">
   </button>
 <%= term_display %></span>
 
