testing color diff changes

--- a/app/assets/stylesheets/custom.scss.erb
+++ b/app/assets/stylesheets/custom.scss.erb
@@ -136,14 +136,14 @@ a {
 .alert-success {
     background-color: #dff0d8;
     border-color: #d6e9c6;
-    color: #468847;
+    color: #3D763E; //wanted to darken the green used for text in the success alerts
     text-align: left;
  }
 
 .alert-notice {
     background-color: #dff0d8;
     border-color: #d6e9c6;
-    color: #468847;
+    color: #3D763E;  //same as above: darken green used for text
     text-align: left;
  }
 
@@ -3762,7 +3762,7 @@ ul.list-right-section li a img {
 }
 
 .family-plan-selection ul.progress-wrapper li.complete .vertical-line-progress {
-    background-color: #468847;
+    background-color: #3D763E; //darken color of progress line when starting user creation
 }
 
 .family-plan-selection .status{
@@ -4676,7 +4676,7 @@ table.table.table-no-sytle td {
 }
 
 /*#qle-details .panel-heading strong {
-  color: #468847`;
+  color: #3D763E; //changes panel heading color
   text-transform:uppercase;
 }
 
@@ -4716,7 +4716,7 @@ position: absolute;
 .memo {
   text-align: right;
   margin: 0;
-  color: #838780;
+  color: #6B6E68; //swap out grey
 }
 
 #shop-for-plans-widget .image-area {
