--- a/app/assets/stylesheets/left_nav.scss.erb
+++ b/app/assets/stylesheets/left_nav.scss.erb
@@ -36,8 +36,8 @@
   }
 
   .activer.global-nav > a {
-    color: #CBE6FF;
-  }
+    color: #FFFFFF;
+  } //changes text color on account setup process to pure white. Not a great look as of rn.
 
   li:not(.activer) a:not(.disabled) {
     color:#0079C0;
@@ -138,8 +138,8 @@
   }
   .cna {
     cursor: not-allowed !important;
-    color:#909090 !important;
-  }
+    color: #757575 !important;
+  } //changes color of greyed out text on left hand side for account setup. could be improved.
 
   .cna {
     font-weight: normal;
