--- a/components/financial_assistance/app/views/financial_assistance/shared/_address_fields_for_applicant.html.erb
+++ b/components/financial_assistance/app/views/financial_assistance/shared/_address_fields_for_applicant.html.erb
@@ -124,7 +124,7 @@
 <% if f.object.addresses[1].present? %>
   <span class="form-action btn btn-default">Remove Mailing Address</span>
 <% else %>
-  <span class="form-action btn btn-default">Add Mailing Address</span>
+  <span tabindex="0" class="form-action btn btn-default">Add Mailing Address</span>
 <% end %>
 
 <script>
