--- a/app/views/employers/people/_search_fields.html.erb
+++ b/app/views/employers/people/_search_fields.html.erb
@@ -32,7 +32,7 @@
           <%= f.text_field :ssn, placeholder: "SOCIAL SECURITY", class: "required floatlabel form-control", required: true %>
         </div>
         <div class="col-md-3 col-sm-3 col-xs-6 form-group form-group-lg no-pd">
-          <div class="radio skinned-form-controls skinned-form-controls-mac">
+          <div tabindex="0" class="radio skinned-form-controls skinned-form-controls-mac">
             <label>
               <%= f.radio_button :gender, "male", required: true, checked: true, class: "required floatlabel" %>
               <span>Male</span>
@@ -40,7 +40,7 @@
           </div>
         </div>
         <div class="col-md-3 col-sm-3 col-xs-6 form-group form-group-lg no-pd">
-          <div class="radio skinned-form-controls skinned-form-controls-mac">
+          <div tabindex="0" class="radio skinned-form-controls skinned-form-controls-mac">
             <label>
               <%= f.radio_button :gender, "female", required: true, class: "required floatlabel"  %>
               <span>Female</span>
