--- a/app/views/insured/consumer_roles/_tribe_fields.html.erb
+++ b/app/views/insured/consumer_roles/_tribe_fields.html.erb
@@ -15,13 +15,13 @@
     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 form-group form-group-lg no-pd border_bottom_zero">
       <div class="radio">
         <%= f.radio_button :indian_tribe_member, "true", class: "required floatlabel", id: 'indian_tribe_member_yes' %>
-        <label for="indian_tribe_member_yes"><span class="yes_no_pair"><%= l10n("Yes") %></span></label>
+        <label for="indian_tribe_member_yes"><span tabindex="0" class="yes_no_pair"><%= l10n("Yes") %></span></label>
       </div>
     </div>
     <div class="col-lg-1 col-md-3 col-sm-3 col-xs-6 form-group form-group-lg no-pd">
       <div class="radio">
         <%= f.radio_button :indian_tribe_member, "false", class: "required floatlabel", id: 'indian_tribe_member_no' %>
-        <label for="indian_tribe_member_no"><span class="yes_no_pair"><%= l10n("no") %></span></label>
+        <label for="indian_tribe_member_no"><span tabindex="0" class="yes_no_pair"><%= l10n("no") %></span></label>
       </div>
     </div>
     <div class="col-md-2 not-sure-margin left-seprator">
