--- a/app/views/shared/_consumer_home_address_fields.html.erb
+++ b/app/views/shared/_consumer_home_address_fields.html.erb
@@ -142,14 +142,14 @@
 <!--        <div class="col-md-6 col-sm-6 col-xs-12 form-group form-group-lg no-pd">-->
 <!--          <div class="radio">-->
             <%#= f.radio_button :is_homeless, "I am homeless", id: 'radio_homeless' %>
-<!--            <label for="radio_homeless"><span>Select this option if you are a homeless DC resident</span></label>-->
+<!--            <label for="radio_homeless"><span tabindex="0">Select this option if you are a homeless DC resident</span></label>-->
 <!--          </div>-->
 <!--        </div>-->
 <!--        <div class="col-md-6 col-sm-6 col-xs-12 form-group form-group-lg no-pd">-->
 <!--          <div class="radio">-->
             <%#= f.radio_button :is_temporarily_out_of_state, "I am temporarily living outside of DC", id: 'radio_outside' %>
 <!--            <label for="radio_outside">-->
-<!--              <span>Select this option if you're living outside of DC temporarily and intend to return</span>-->
+<!--              <span tabindex="0">Select this option if you're living outside of DC temporarily and intend to return</span>-->
 <!--            </label>-->
 <!--          </div>-->
 <!--        </div>-->
@@ -163,7 +163,7 @@
 <% if f.object.addresses[1].present? %>
 <span class="form-action btn btn-default <%= pundit_class Family, :updateable?%>" data-cuke="remove_mailing_address">Remove Mailing Address</span>
 <% else %>
-<span class="form-action btn btn-default <%= pundit_class Family, :updateable?%>">Add Mailing Address</span>
+<span tabindex="0" class="form-action btn btn-default <%= pundit_class Family, :updateable?%>">Add Mailing Address</span>
 <% end %>
 
 
