--- a/components/financial_assistance/app/views/financial_assistance/shared/_consumer_fields.html.erb
+++ b/components/financial_assistance/app/views/financial_assistance/shared/_consumer_fields.html.erb
@@ -11,7 +11,7 @@
       <div class="radio skinned-form-controls skinned-form-controls-mac">
         <%= f.radio_button :us_citizen, true, required: true, class: "required floatlabel" %>
         <%= f.label :us_citizen, :value => true do %>
-          <span class="yes_no_pair">Yes</span>
+          <span tabindex="0" class="yes_no_pair">Yes</span>
         <% end %>
       </div>
     </div>
@@ -19,7 +19,7 @@
       <div class="radio skinned-form-controls skinned-form-controls-mac">
         <%= f.radio_button :us_citizen, false, required: true, class: "required floatlabel" %>
         <%= f.label :us_citizen, :value => false do %>
-          <span class="yes_no_pair">No</span>
+          <span tabindex="0" class="yes_no_pair">No</span>
         <% end %>
       </div>
     </div>
@@ -37,15 +37,15 @@
       <div class="radio skinned-form-controls skinned-form-controls-mac">
         <%= f.radio_button :naturalized_citizen, true, required: true, class: "required floatlabel" %>
         <%= f.label :naturalized_citizen, :value => true do %>
-          <span class="yes_no_pair">Yes</span>
+          <span tabindex="0" class="yes_no_pair">Yes</span>
         <% end %>
       </div>
     </div>
     <div class="col-lg-2 col-md-3 col-sm-6 col-xs-6 form-group form-group-lg no-pd">
       <div class="radio skinned-form-controls skinned-form-controls-mac">
-        <%= f.radio_button :naturalized_citizen, false, required: true, class: "required floatlabel" %>
+        <%= f.radio_button :naturalized_citizen, false, required: true, type: radio, class: "required floatlabel" %>
         <%= f.label :naturalized_citizen, :value => false do %>
-          <span class="yes_no_pair">No</span>
+          <span tabindex="0" class="yes_no_pair">No</span>
         <% end %>
       </div>
     </div>
@@ -67,7 +67,7 @@
       <div class="col-lg-4 col-md-4 col-sm-8 col-xs-6 form-group form-group-lg no-pd">
         <div id="immigration-checkbox" class="checkbox">
           <%= f.check_box :eligible_immigration_status, {}, "true", "false" %>
-          <span><%= l10n('yes') %></span>
+          <span tabindex="0"><%= l10n('yes') %></span>
         </div>
       </div>
     <% else %>
@@ -75,7 +75,7 @@
         <div class="radio skinned-form-controls skinned-form-controls-mac">
           <%= f.radio_button :eligible_immigration_status, true, class: "required floatlabel" %>
           <%= f.label :eligible_immigration_status, :value => true do %>
-            <span class="yes_no_pair">Yes</span>
+            <span tabindex="0" class="yes_no_pair">Yes</span>
           <% end %>
         </div>
       </div>
@@ -83,7 +83,7 @@
         <div class="radio skinned-form-controls skinned-form-controls-mac">
           <%= f.radio_button :eligible_immigration_status, false, class: "required floatlabel" %>
           <%= f.label :eligible_immigration_status, :value => false do %>
-            <span class="yes_no_pair">No</span>
+            <span tabindex="0" class="yes_no_pair">No</span>
           <% end %>
         </div>
       </div>
