--- a/components/financial_assistance/app/views/financial_assistance/shared/_consumer_home_address_fields.html.erb
+++ b/components/financial_assistance/app/views/financial_assistance/shared/_consumer_home_address_fields.html.erb
@@ -135,5 +135,5 @@
 <% if f.object.addresses[1].present? %>
 <span class="form-action btn btn-default <%= pundit_class Family, :updateable?%>">Remove Mailing Address</span>
 <% else %>
-<span class="form-action btn btn-default <%= pundit_class Family, :updateable?%>">Add Mailing Address</span>
+<span tabindex="0" class="form-action btn btn-default <%= pundit_class Family, :updateable?%>">Add Mailing Address</span>
 <% end %>
