--- a/components/financial_assistance/app/views/financial_assistance/shared/_tribe_fields.html.erb
+++ b/components/financial_assistance/app/views/financial_assistance/shared/_tribe_fields.html.erb
@@ -14,13 +14,13 @@
     <div class="col-lg-2 col-md-2 col-sm-2 col-xs-6 form-group form-group-lg no-pd border_bottom_zero">
       <div class="radio">
         <%= f.radio_button :indian_tribe_member, "true", class: "required floatlabel", id: 'indian_tribe_member_yes' %>
-        <label for="indian_tribe_member_yes"><span class="yes_no_pair"><%= l10n("Yes") %></span></label>
+        <label for="indian_tribe_member_yes"><span tabindex="0" class="yes_no_pair"><%= l10n("Yes") %></span></label>
       </div>
     </div>
     <div class="col-lg-2 col-md-2 col-sm-2 col-xs-6 form-group form-group-lg no-pd">
       <div class="radio">
         <%= f.radio_button :indian_tribe_member, "false", class: "required floatlabel", id: 'indian_tribe_member_no' %>
-        <label for="indian_tribe_member_no"><span class="yes_no_pair"><%= l10n("no") %></span></label>
+        <label for="indian_tribe_member_no"><span tabindex="0" class="yes_no_pair"><%= l10n("no") %></span></label>
       </div>
     </div>
   </div>
