--- a/app/assets/stylesheets/_variables.scss.erb
+++ b/app/assets/stylesheets/_variables.scss.erb
@@ -25,7 +25,7 @@ $primary-button-border-disabled: <%= Settings.style.primary_button_border_disabl
 $qle-header-color: <%= Settings.style.qle_header_color %>;
 $primary-table-heading: <%= EnrollRegistry[:primary_table_heading].settings(:color).item %>;
 $primary-button-border: <%= EnrollRegistry[:primary_button_border].settings(:color).item %>;
-$primary-blue: $blue;
+$primary-blue: #0071b3;
 $primary-white: <%= EnrollRegistry[:primary_white].settings(:color).item %>;
 $primary-button-text: <%= EnrollRegistry[:primary_white].settings(:color).item %>;
 $primary-green: <%= EnrollRegistry[:primary_green].settings(:color).item %>;
@@ -34,6 +34,7 @@ $primay-active-button-text-color: <%= EnrollRegistry[:primary_white].settings(:c
 $primary-bold: 600;
 $primary-light: 300;
 $primary-gray: $gray;
+$secondary-gray: #757575;
 $primary-light-gray: <%= EnrollRegistry[:primary_light_gray].settings(:color).item %>;
 $primary-dark-gray: <%= EnrollRegistry[:primary_dark_gray].settings(:color).item %>;
 $primary-button-text-casing: uppercase;
