--- a/app/assets/stylesheets/insured.scss.erb
+++ b/app/assets/stylesheets/insured.scss.erb
@@ -154,7 +154,7 @@
   padding-top: 4.45%;
 }
 .fa-icon-link, .fa-icon-label, a {
-  color: #0071b3;
+  color: $brand-primary;
   cursor: pointer;
   &:hover {
     color: #23527c;
