186419463 homepage accessibility fix

--- a/app/javascript/css/me.scss
+++ b/app/javascript/css/me.scss
@@ -1,6 +1,8 @@
 :root {
   --font: Barlow, sans-serif;
   --default-font-color: #323130;
+  --secondary-font-color: #676C72; //This should be used for secondary text throughout the page
+  --theme-primary-100: #3B6B90; //This should always be used as the primary blue
 
   --placeholder-color: #676767;
   --placeholder-font-weight: 400;
